--- a/c_code/e_jquery/css/base/reset.css
+++ b/c_code/e_jquery/css/base/reset.css
@@ -10,6 +10,12 @@ h1, h2, h3, h4, h5, h6, p, div{
 ul, ol, li, dl, dt, dd{ margin: 0; padding: 0; list-style: none;}
 
 a { text-decoration: none; color:inherit; }
+button { background-color: transparent; cursor: pointer;}
+
+a:hover, a:focus,
+button:hover, button:focus {
+  position: relative; z-index: 500; outline: 3px solid #f70;
+}
 
 hr{width: 100%; height: 0; margin: 0;
   border: 0;
