--- a/c_code/e_jquery/css/src/ex_03_modal.css
+++ b/c_code/e_jquery/css/src/ex_03_modal.css
@@ -21,26 +21,25 @@
         display: block; position: absolute; bottom: 0; left: 0;
         width: 100%; height: 2rem; background-color: rgba(0,0,0,0.7);
         padding-top: 1rem; color:#fff; font-weight: bold;
-        
-      }
+          }
 
-    .modal_01 ul li:nth-child(1) > button{ background-image: url('../../img/modal/juice_small_01.jpg');}
+    /* .modal_01 ul li:nth-child(1) > button{ background-image: url('../../img/modal/juice_small_01.jpg');}
     .modal_01 ul li:nth-child(2) > button{ background-image: url('../../img/modal/juice_small_02.jpg');}
     .modal_01 ul li:nth-child(3) > button{ background-image: url('../../img/modal/juice_small_03.jpg');}
-    .modal_01 ul li:nth-child(4) > button{ background-image: url('../../img/modal/juice_small_04.jpg');}
+    .modal_01 ul li:nth-child(4) > button{ background-image: url('../../img/modal/juice_small_04.jpg');} */
 
     /* -------------------------------- */
     .gallery_box {display: none;
       position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index:100; background-color: rgba(0,0,0,0.5);}
-    .gallery_area {
+    .gallery_area { 
       position: absolute; top: 50%; left: 50%; transform:translate(-50%, -50%);
       width: 500px; height: 300px; border-radius:0.5rem; padding:1rem; background-color: #fff; }
     .gallery_area .close {
-      position: absolute; top: -.5rem; right: -.5rem; width: 2rem; height: 2rem;}
+      position: absolute; top: -2.5rem; right: -2.5rem; width: 2rem; height: 2rem;}
     .gallery_area button {width: 100%; height: 100%; border-radius: 100%; box-sizing:border-box; border:0.3rem solid #333; background-color: #fff; font-size:0.7rem;}
-    .big_img {width: 100%; height: 100%;}
+    .big_img {overflow: hidden; position: relative; width: 100%; height: 100%; background-repeat: no-repeat; background-position: 50% 50%; background-size: 100% auto;}
     .big_img p {
       position: absolute; left: 0; bottom: 0; width: 100%; height:auto; box-sizing: border-box; padding: 1rem;
       background-color:rgba(0,0,0,0.7); color:#fff;
-      border-bottom-right-radius:0.5rem; border-bottom-left-radius:0.5rem;
-  }
+      border-bottom-right-radius:0.5rem; border-bottom-left-radius:0.5rem; transform: translateY(105%);}
+  .big_img p.action {transform: translateY(0); transition: all 300ms ease;}
