--- a/19tea_web/css/src/19tea_main_1024/19tea_main_1024.css
+++ b/19tea_web/css/src/19tea_main_1024/19tea_main_1024.css
@@ -39,7 +39,7 @@
   .view_img_03 > a{background-image: url("../../../img/main/view/1024_view_add_03.png");}
   
   .view_indicator{ 
-    position: absolute; left: 50%; bottom: 20px; transform: translateX(-50%); 
+    position: absolute; left: 50%; bottom: 20px; z-index: 500; transform: translateX(-50%); 
     width: 164px; height: 40px;
   }
   .view_indicator li{
@@ -50,24 +50,26 @@
   .view_indicator li.action{background-color: #0063b4;}
   .view_indicator li:last-child{margin-right: 0;}
 /* //viewBox----------------------------------------- */
-  #advantagesBox{position: relative; width: 100%; max-width: 1024px; height: 600px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
+  #advantagesBox{width: 100%; height: 600px; padding-top: 50px; box-sizing: border-box; background-color: #fff;}
     #advantagesBox h2{
       width: 236px; height: 60px; color: #02396d; 
       font-size: 30px; font-weight: bold; margin: auto; text-align: center;
-    } 
-    #advantagesBox ul{width: 100%; height: 100%;}
-    .next_btn{
-      position: absolute; top: 50%; right: 100px; z-index: 100;
-      width: 38px; height: 56px;
     }
-    .next_btn button{width: 100%; height: 100%; 
+    .advantages_area{position: relative; width: 66.2109375vw; height: 374px; margin: auto;} 
+    .advantages_con{width: 600px; height: 100%;}
+    .advantages_con ul{width: 100%; height: 100%;}
+    .next_btn{
+      /* position: absolute; top: 50%; right: 100px; z-index: 100; */
+      float: right; width: 78px; height: 100%;
+    }
+    .next_btn button{width: 38px; height: 56px; margin-left: 30px; margin-top: 168px;
       background-image: url("../../../img/main/content/incator_icon.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
 
     .advantages_img_01{
-      position: absolute; top: 170px; left: 50%; transform: translateX(-50%); z-index: 50;
-      width: 58.59375vw; height:374px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
+      position: absolute; z-index: 50;
+      width: 600px; height:374px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
       background-image: url("../../../img/main/content/1024_content_img_01.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
@@ -77,8 +79,8 @@
       background-color: rgba(103, 103, 103, 0.7);
     }
     .advantages_img_02{
-      position: absolute; top: 170px; left: 50%; transform: translateX(-50%); z-index: 40;
-      width: 58.59375vw; height:374px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
+      position: absolute; z-index: 40;
+      width: 600px; height:374px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
       background-image: url("../../../img/main/content/1024_content_img_02.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
