--- a/19tea_web/css/src/19tea_main_1440/19tea_main_1440.css
+++ b/19tea_web/css/src/19tea_main_1440/19tea_main_1440.css
@@ -38,7 +38,7 @@
   .view_img_03 > a{background-image: url("../../../img/main/view/1440_view_add_03.png");}
   
   .view_indicator{ 
-    position: absolute; left: 50%; bottom: 20px; transform: translateX(-50%); 
+    position: absolute; left: 50%; bottom: 20px; z-index: 500; transform: translateX(-50%); 
     width: 164px; height: 40px;
   }
   .view_indicator li{
@@ -49,24 +49,26 @@
   .view_indicator li.action{background-color: #0063b4;}
   .view_indicator li:last-child{margin-right: 0;}
 /* //viewBox----------------------------------------- */
-  #advantagesBox{position: relative; width: 100%; max-width: 1440px; height: 800px; padding-top:50px ; box-sizing: border-box; background-color: #fff;}
+  #advantagesBox{width: 100%; max-width: 1440px; height: 800px; padding-top:50px ; box-sizing: border-box; background-color: #fff;}
   #advantagesBox h2{
     width: 236px; height: 60px; color: #02396d; 
     font-size: 30px; font-weight: bold; margin: auto; text-align: center;
   } 
-  .advantages_area{width: 100%; height: 100%;}
-  #advantagesBox ul{width: 100%; height: 100%;}
+  .advantages_area{position: relative; width: 68.8888888889vw; height: 500px; margin: auto; margin-top: 50px;} 
+  .advantages_con{width: 900px; height: 100%;}
+  .advantages_con ul{width: 100%; height: 100%;}
   .next_btn{
-    position: absolute; top: 50%; right: 124px; z-index: 100;
-    width: 38px; height: 56px;
+    /* position: absolute; top: 50%; right: 100px; z-index: 100; */
+    float: right; width: 6.38888888889vw; height: 100%;
   }
-  .next_btn button{width: 100%; height: 100%; 
+  .next_btn button{width: 38px; height: 56px; margin-left: 2.08333333333vw; margin-top: 188px;
     background-image: url("../../../img/main/content/incator_icon.png");
     background-repeat: no-repeat; background-position: 50% 50%;
   }
 
-  .advantages_img_01{position: absolute; top: 170px; left: 50%; transform: translateX(-50%); z-index: 50;
-    width: 62.5vw; height:500px;  margin: auto;  box-shadow: 2px 2px 5px 5px #989898; margin-top: 30px;
+  .advantages_img_01{
+    position: absolute; z-index: 50;
+    width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
     background-image: url("../../../img/main/content/big_content_img_01.png");
     background-repeat: no-repeat; background-position: 50% 50%;
   }
@@ -75,8 +77,9 @@
     color: #fff; font-size: 20px; font-weight: bold; text-align: center; line-height: 100px;
     background-color: rgba(103, 103, 103, 0.7);
   }
-  .advantages_img_02{position: absolute; top: 170px; left: 50%; transform: translateX(-50%); z-index: 40;
-    width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; margin-top: 30px;
+  .advantages_img_02{
+    position: absolute; z-index: 40;
+    width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898;
     background-image: url("../../../img/main/content/big_content_img_02.png");
     background-repeat: no-repeat; background-position: 50% 50%;
   }
