--- a/19tea_web/css/src/19tea_main_1920/19tea_main_1920.css
+++ b/19tea_web/css/src/19tea_main_1920/19tea_main_1920.css
@@ -9,7 +9,7 @@
       background-repeat: no-repeat; background-position: 50% 50%;
       background-size: contain;
     }
-    #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px;}
+    #gnbBox{float: right; width: 570px; height: 50px; margin-top: 50px; margin-right: 100px;}
     .gnb_close{display: none;}
     .gnb_area{width: 100%; height: 100%;}
     .gnb_main_menu{float: left; width: 540px; height: 100%;}
@@ -39,7 +39,7 @@
   .view_img_03 > a{background-image: url("../../../img/main/view/1920_view_add_03.png");}
   
   .view_indicator{ 
-    position: absolute; left: 50%; bottom: 20px; z-index: 800; transform: translateX(-50%); 
+    position: absolute; left: 50%; bottom: 20px; z-index: 500; transform: translateX(-50%); 
     width: 164px; height: 40px;
   }
   .view_indicator li a{display: block; width: 100%; height: 100%;}
