--- a/c_code/test_11_25/css/src/test_11_25.css
+++ b/c_code/test_11_25/css/src/test_11_25.css
@@ -2,7 +2,9 @@
 
 #wrap{position: relative; width: 100%; height: auto; min-height: 1000px; margin: auto;}
 
-#headBox{position: absolute; top:45px;  left: 50%; transform: translate(-50%); z-index: 1000; width: 80%; height: 90px; background-color:rgba(85, 85, 85, 0.5);}
+#headBox{
+  position: absolute; top:45px; left: 50%; transform: translate(-50%); z-index: 1000; 
+  width: 80%; height: 90px; background-color:rgba(85, 85, 85, 0.7);}
 h1{float: left; width: 20%; height: 100%; background-color: #fff;}
 #navBox{float: right; width: 80%; height: 100%;}
 #navBox ul{width: 100%; height: 100%;}
@@ -12,9 +14,12 @@ h1{float: left; width: 20%; height: 100%; background-color: #fff;}
 #navBox ul>li>a:focus{background-color: #ff0; color:#333;}
 
 #viewBox{position: relative; width: 100%; height: 100vh; background-color: #ff0;}
+  .count_page{position: absolute; right: 120px; bottom: 100px; z-index: 500; width: 100px; height: 30px; background-color: rgba(85, 85, 85, 0.7);}
+  .count_page span{float: left; width: 40px; height: 100%; color: #fff; font-size: 20px; text-align: center;}
+  .count_page p{float: left; width: 10px; height: 100%; color: #fff; font-size: 20px; }
   .view_link{
     position: absolute; right: 120px; bottom: 50px; z-index: 500; width: 250px; height: 34px;
-    padding: 5px; box-sizing: border-box; border-radius: 20px; background-color: rgba(85, 85, 85, 0.5);;
+    padding: 5px; box-sizing: border-box; border-radius: 20px; background-color: rgba(85, 85, 85, 0.7);
     }
     .indicator{float: left; width:170px; height: 24px;}
     .indicator > li{float: left; width: 24px; height: 100%; margin-right: 10px;}
@@ -29,7 +34,8 @@ h1{float: left; width: 20%; height: 100%; background-color: #fff;}
 
   .view_img{width: 100%; height: 100%; overflow: hidden;}
   .view_img ul{position: relative; z-index: 100; width: 500%; height: 100%;}
-  .view_img ul li{float: left; width: 20%; height: 100%; background-position: 50% 50%; background-repeat: no-repeat; background-size: cover;}  
+  .view_img ul li{float: left; width: 20%; height: 100%; 
+    background-position: 50% 50%; background-repeat: no-repeat; background-size: cover;}  
     .img_01{background-image: url("../../img/dog/dog_01.jpg");}
     .img_02{background-image: url("../../img/dog/dog_02.jpg");}
     .img_03{background-image: url("../../img/dog/dog_03.jpg");}
