19tea_main_js and brand~ing

--- a/19tea_web/css/src/main/19tea_main_1024/19tea_main_1024.css
+++ b/19tea_web/css/src/main/19tea_main_1024/19tea_main_1024.css
@@ -4,7 +4,7 @@
   h1 {float: left; width: 200px; height: 80px; margin-left: 40px;}
   h1 a{
     display: block; width: 100%; height: 100%;
-    background-image: url("../../../img/logo/logo_big.png");
+    background-image: url("../../../../img/logo/logo_big.png");
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: contain;
    }
@@ -28,27 +28,25 @@
 
   #viewBox{position: relative; width: 100%; height: 400px; background-color: #fef;}
   .view_area{width: 100%; height: 100%; overflow: hidden;}
-  .view_indicator{ 
-    position: absolute; left: 50%; bottom: 20px; z-index: 1000; transform: translateX(-50%); 
-    width: 164px; height: 40px;
+  .view_indi_area{    position: absolute; right: 10%; bottom: 20px; z-index: 1000; 
+    width: 160px; height: 40px; text-align: center; border-radius: 20px;background-color: rgba(85,85,85,0.7);}
+  .view_indicator{ width: 80%; height: 100%;margin: auto; }
+  .view_indicator li{ float: left;
+    width: 20px; height: 20px; border-radius: 100%;
+    margin-left: 20px; margin-top: 10px; background-color: #fff;
   }
-  .view_indicator li{
-    float: left; width: 40px; height: 100%; border-radius: 100%; 
-    margin-right: 20px; background-color: #fff;
-  }
-  .view_indicator li a{display: block; width: 100%; height: 100%;}
   .view_indicator li.action{background-color: #0063b4;}
-  .view_indicator li:last-child{margin-right: 0;}
-
+  .view_indicator li:first-child{margin-left: 12px;}
+  .view_indicator li >a {width: 100%; height: 100%;}
   .view_area .view_con{width: 300%; height: 100%;}
   .view_con li{float: left; width: 33.333334%; height: 100%;}
   .view_con li > a{    
     display: block; width: 100%; height: 100%; 
     background-position: 50% 50%; background-repeat: no-repeat;
   }
-  .view_img_01 > a{background-image: url("../../../img/main/view/1024_view_add_01.png");}
-  .view_img_02 > a{background-image: url("../../../img/main/view/1024_view_add_02.png");}
-  .view_img_03 > a{background-image: url("../../../img/main/view/1024_view_add_03.png");}
+  .view_img_01 > a{background-image: url("../../../../img/main/view/1024_view_add_01.png");}
+  .view_img_02 > a{background-image: url("../../../../img/main/view/1024_view_add_02.png");}
+  .view_img_03 > a{background-image: url("../../../../img/main/view/1024_view_add_03.png");}
   
 
 /* //viewBox----------------------------------------- */
@@ -80,7 +78,7 @@
       float: right; width: 7.617813vw; height: 100%;
     }
     .next_btn button{width: 38px; height: 56px; margin-left: 30px; margin-top: 168px;
-      background-image: url("../../../img/main/content/incator_icon.png");
+      background-image: url("../../../../img/main/content/incator_icon.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
 
@@ -88,7 +86,7 @@
       position: absolute; z-index: 50;
       /* width: 58.59375vw; height:374px;   */
       /* width: 100%; height: 100%;  */
-      background-image: url("../../../img/main/content/1024_content_img_01.png");
+      background-image: url("../../../../img/main/content/1024_content_img_01.png");
       /* background-repeat: no-repeat; background-position: 50% 50%; */
     }
     /* .advantages_img_01 span{
@@ -100,7 +98,7 @@
       /* position: absolute; z-index: 40; */
       /* width: 58.59375vw; height:374px;   */
       /* width: 100%; height: 100%;  */
-      background-image: url("../../../img/main/content/1024_content_img_02.png");
+      background-image: url("../../../../img/main/content/1024_content_img_02.png");
       /* background-repeat: no-repeat; background-position: 50% 50%; */
     }
     /* .advantages_img_02 span{
@@ -118,7 +116,7 @@
     .video_con {
       position: relative;
       width: 58.59375vw; height: 400px; margin: auto; border: 1px solid #313131; box-sizing: border-box;
-      margin-top: 30px; background-image: url("../../../img/main/video/10024_video_img.png");
+      margin-top: 30px; background-image: url("../../../../img/main/video/10024_video_img.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
     .video_text{display: none;}
@@ -128,10 +126,10 @@
     }
     .video_btn button{
       width: 100%; height: 100%;
-      background-image: url("../../../img/main/video/play_btn.png");
+      background-image: url("../../../../img/main/video/play_btn.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
-    .video_btn button:hover{background-image: url("../../../img/main/video/play_btn_hover.png");}
+    .video_btn button:hover{background-image: url("../../../../img/main/video/play_btn_hover.png");}
 /* //promptionBox----------------------------------------------- */  
   #reviewBox{position: relative; padding-top: 40px; max-width: 1024px; box-sizing: border-box; width: 100%; height: 300px; background-color: #fff;}
   .instagram_icon{
@@ -140,7 +138,7 @@
   }
   .instagram_icon a{      
     width: 100%; height: 100%;
-    background-image: url("../../../img/main/review/instagram_icon.png");
+    background-image: url("../../../../img/main/review/instagram_icon.png");
     background-repeat: no-repeat; background-position: 50% 50%;
   }
   .review_area{width: 100%; height: 100%;}
@@ -149,10 +147,10 @@
     display: inline-block; width: 14.648437vw; height: 150px; margin-left: 5.859375vw; margin-top: 30px;
     background-repeat: no-repeat; background-position: 50% 50%;
   }
-  .review_area ul li:nth-child(1){margin-left: 0; background-image: url("../../../img/main/review/instagram_img_01.png");}
-  .review_area ul li:nth-child(2){background-image: url("../../../img/main/review/instagram_img_02.png");}
-  .review_area ul li:nth-child(3){background-image: url("../../../img/main/review/instagram_img_03.png");}
-  .review_area ul li:nth-child(4){background-image: url("../../../img/main/review/instagram_img_04.png");}
+  .review_area ul li:nth-child(1){margin-left: 0; background-image: url("../../../../img/main/review/instagram_img_01.png");}
+  .review_area ul li:nth-child(2){background-image: url("../../../../img/main/review/instagram_img_02.png");}
+  .review_area ul li:nth-child(3){background-image: url("../../../../img/main/review/instagram_img_03.png");}
+  .review_area ul li:nth-child(4){background-image: url("../../../../img/main/review/instagram_img_04.png");}
 /*//review-------------------------------------------------------------------  */
   #footBox{position: relative; width: 100%; height: 200px; padding: 40px 50px; box-sizing: border-box; color:#989898; background-color: #313131;}
 
@@ -162,7 +160,7 @@
       width: 6.8359375vw; height: 40px; float: left; 
       background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
     }
-    .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../img/foot/login.png");}
-    .ect_area a:nth-child(3){background-image: url("../../../img/foot/link_page.png");}
+    .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
+    .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
     .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 22.4609375vw; height: 20px;}
   }
