--- a/19tea_web/css/src/main/19tea_main_1440/19tea_main_1440.css
+++ b/19tea_web/css/src/main/19tea_main_1440/19tea_main_1440.css
@@ -4,7 +4,7 @@
   h1 {float: left; width: 200px; height: 80px;}
     h1 a{
       display: block; width: 100%; height: 100%;
-      background-image: url("../../../img/logo/logo_big.png");
+      background-image: url("../../../../img/logo/logo_big.png");
       background-repeat: no-repeat; background-position: 50% 50%;
       background-size: contain;
     }
@@ -27,27 +27,25 @@
  /*//headBox-------------------------------------------------  */
   #viewBox{position: relative; width: 100%; height: 500px; background-color: #fef;}
   .view_area{width: 100%; height: 100%; overflow: hidden;}
-  .view_indicator{ 
-    position: absolute; left: 50%; bottom: 20px; z-index: 1000; transform: translateX(-50%); 
-    width: 164px; height: 40px;
+  .view_indi_area{position: absolute; right: 10%; bottom: 20px; z-index: 1000;
+    width: 160px; height: 40px; text-align: center; border-radius: 20px;background-color: rgba(85,85,85,0.7);}
+  .view_indicator{ width: 80%; height: 100%;margin: auto; }
+  .view_indicator li{ float: left;
+    width: 20px; height: 20px; border-radius: 100%;
+    margin-left: 20px; margin-top: 10px; background-color: #fff;
   }
-  .view_indicator li{
-    float: left; width: 40px; height: 100%; border-radius: 100%; 
-    margin-right: 20px; background-color: #fff;
-  }
-  .view_indicator li a{display: block; width: 100%; height: 100%;}
   .view_indicator li.action{background-color: #0063b4;}
-  .view_indicator li:last-child{margin-right: 0;}
-
+  .view_indicator li:first-child{margin-left: 12px;}
+  .view_indicator li >a {width: 100%; height: 100%;}
   .view_area .view_con{width: 300%; height: 100%;}
   .view_con li{float: left; width: 33.333334%; height: 100%;}
   .view_con li > a{    
     display: block; width: 100%; height: 100%; 
     background-position: 50% 50%; background-repeat: no-repeat;
   }
-  .view_img_01 > a{background-image: url("../../../img/main/view/1440_view_add_01.png");}
-  .view_img_02 > a{background-image: url("../../../img/main/view/1440_view_add_02.png");}
-  .view_img_03 > a{background-image: url("../../../img/main/view/1440_view_add_03.png");}
+  .view_img_01 > a{background-image: url("../../../../img/main/view/1440_view_add_01.png");}
+  .view_img_02 > a{background-image: url("../../../../img/main/view/1440_view_add_02.png");}
+  .view_img_03 > a{background-image: url("../../../../img/main/view/1440_view_add_03.png");}
   
 
 /* //viewBox----------------------------------------- */
@@ -57,7 +55,7 @@
     font-size: 30px; font-weight: bold; margin: auto; text-align: center;
   } 
   .advantages_area{ width: 68.8888888889vw; height: 500px; margin: auto; margin-top: 50px;} 
-  .advantages_con{width: 900px; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
+  .advantages_con{width: 62.5vw; height: 100%; box-shadow: 2px 2px 5px 5px #989898;
     box-sizing: border-box; padding:0.5rem;}
   .advantages_con ul{position: relative; width: 100%; height: 100%;}
   .advantages_con ul li{
@@ -78,14 +76,14 @@
     float: right; width: 6.38888888889vw; height: 100%;
   }
   .next_btn button{width: 38px; height: 56px; margin-left: 2.08333333333vw; margin-top: 188px;
-    background-image: url("../../../img/main/content/incator_icon.png");
+    background-image: url("../../../../img/main/content/incator_icon.png");
     background-repeat: no-repeat; background-position: 50% 50%;
   }
 
   .advantages_img_01{
     position: absolute; z-index: 50;
     /* width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; */
-    background-image: url("../../../img/main/content/big_content_img_01.png");
+    background-image: url("../../../../img/main/content/big_content_img_01.png");
     /* background-repeat: no-repeat; background-position: 50% 50%; */
   }
   /* .advantages_img_01 span{
@@ -96,7 +94,7 @@
   .advantages_img_02{
     /* position: absolute; z-index: 40;
     width: 62.5vw; height:500px;  margin: auto; box-shadow: 2px 2px 5px 5px #989898; */
-    background-image: url("../../../img/main/content/big_content_img_02.png");
+    background-image: url("../../../../img/main/content/big_content_img_02.png");
     /* background-repeat: no-repeat; background-position: 50% 50%; */
   }
   /* .advantages_img_02 span{
@@ -115,7 +113,7 @@
     .video_con {position: relative; 
       float: left; margin-left: 172px;
       width: 48.6111111111vw; height: 400px; border: 1px solid #313131; box-sizing: border-box;
-      margin-top: 80px; background-image: url("../../../img/main/video/big_video_img.png");
+      margin-top: 80px; background-image: url("../../../../img/main/video/big_video_img.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
     .video_text{
@@ -128,7 +126,7 @@
         background-repeat: no-repeat; background-position: 50% 50%;
        }
       .video_text ul li:nth-child(1){margin-bottom: 10px;}
-      .video_text ul li:nth-child(2){background-image: url("../../../img/main/video/big_text_img.png");}
+      .video_text ul li:nth-child(2){background-image: url("../../../../img/main/video/big_text_img.png");}
 
       .video_text ul li p:nth-child(1){font-size: 24px; font-weight: bold; margin-bottom: 20px;}
 
@@ -138,11 +136,11 @@
     }
     .video_btn button{
       width: 100%; height: 100%;
-      background-image: url("../../../img/main/video/play_btn.png");
+      background-image: url("../../../../img/main/video/play_btn.png");
       background-repeat: no-repeat; background-position: 50% 50%;
     }
     .video_btn button:hover,
-    .video_btn button:focus{background-image: url("../../../img/main/video/play_btn_hover.png");}
+    .video_btn button:focus{background-image: url("../../../../img/main/video/play_btn_hover.png");}
 /* //promptionBox----------------------------------------------- */ 
   #reviewBox{position: relative; padding-top: 40px; box-sizing: border-box; width: 100%; height: 300px; background-color: #fff;}
   .instagram_icon{
@@ -151,7 +149,7 @@
   }
   .instagram_icon a{      
     width: 100%; height: 100%;
-    background-image: url("../../../img/main/review/instagram_icon.png");
+    background-image: url("../../../../img/main/review/instagram_icon.png");
     background-repeat: no-repeat; background-position: 50% 50%;
   }
   .review_area{width: 100%; height: 100%;}
@@ -160,20 +158,20 @@
     display: inline-block;  width: 200px; height: 200px; margin-left: 100px; margin-top: 30px;
     background-repeat: no-repeat; background-position: 50% 50%;
   }
-  .review_area ul li:nth-child(1){margin-left: 0; background-image: url("../../../img/main/review/big_instagram_img_01.png");}
-  .review_area ul li:nth-child(2){background-image: url("../../../img/main/review/big_instagram_img_02.png");}
-  .review_area ul li:nth-child(3){background-image: url("../../../img/main/review/big_instagram_img_03.png");}
-  .review_area ul li:nth-child(4){background-image: url("../../../img/main/review/big_instagram_img_04.png");}
+  .review_area ul li:nth-child(1){margin-left: 0; background-image: url("../../../../img/main/review/big_instagram_img_01.png");}
+  .review_area ul li:nth-child(2){background-image: url("../../../../img/main/review/big_instagram_img_02.png");}
+  .review_area ul li:nth-child(3){background-image: url("../../../../img/main/review/big_instagram_img_03.png");}
+  .review_area ul li:nth-child(4){background-image: url("../../../../img/main/review/big_instagram_img_04.png");}
 /*//review-------------------------------------------------------------------  */
 #footBox{position: relative; width: 100%; height: 200px;padding: 40px 80px; box-sizing: border-box; color:#989898; background-color: #313131;}
 
-    #footBox address{float: left; width: 15.9722222vw; height: 108px; font-size: 12px;}
+    #footBox address{float: left; width: 15.9722222vw; height: 108px;}
     .ect_area{float: right; width: 11.25vw; height: 120px;}
     .ect_area a{
       width: 4.86111111111vw; height: 40px; float: left; 
       background-repeat: no-repeat; background-position: 50% 50%; background-size: contain;
     }
-    .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../img/foot/login.png");}
-    .ect_area a:nth-child(3){background-image: url("../../../img/foot/link_page.png");}
+    .ect_area a:nth-child(2){margin-right: 10px; background-image: url("../../../../img/foot/login.png");}
+    .ect_area a:nth-child(3){background-image: url("../../../../img/foot/link_page.png");}
     .foot_text{position: absolute; top: 70%; left: 50%;  transform: translateX(-50%); width: 15.9722222vw; height: 20px;}
   }
